--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "body-parser": "^1.20.0",
     "ejs": "^3.1.6",
     "express": "^4.17.3",
-    "express-handlebars": "3.0",
+    "express-handlebars": "^6.0.5",
     "pug": "^3.0.2"
   }
 }
