--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "ejs": "^3.1.6",
     "express": "^4.17.3",
     "express-handlebars": "^6.0.5",
+    "mongodb": "^4.5.0",
     "mysql2": "^2.3.3",
     "pug": "^3.0.2",
     "sequelize": "^6.19.0"
